<?xml version="1.0"?>
<package format="2">
  <name>force_sensor_3D</name>
  <version>0.0.0</version>
  <description>The 3-axis force sensor package</description>


  <maintainer email="vrosillo1110@gmail.com">victor</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>rosserial_python</build_depend>
  <build_depend>rosserial_arduino</build_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>rosserial_python</exec_depend>
  <exec_depend>rosserial_arduino</exec_depend>
  <exec_depend>message_runtime</exec_depend>

  <export>

  </export>
</package>


